MGMT-22909: Add SSRF protection for release image URL handling
Security improvements for URL validation:

- Add ImageURLValidator with DNS resolution and IP validation
- Block private IP ranges (RFC 1918, link-local, loopback)
- Prevent DNS rebinding attacks via hostname resolution
- Add configurable internal service allowlist
- Integrate validation into release image handling
- Add defense-in-depth validation at CLI execution layer
- Add comprehensive test coverage
- Add security documentation for SSRF protection design

Prevents SSRF attacks that could access internal infrastructure,
cloud metadata endpoints, or other sensitive resources.

--- a/deploy/assisted-service-configmap.yaml
+++ b/deploy/assisted-service-configmap.yaml
@@ -32,4 +32,5 @@ data:
   NVIDIA_REQUIRE_GPU: REPLACE_NVIDIA_REQUIRE_GPU
   AMD_REQUIRE_GPU: REPLACE_AMD_REQUIRE_GPU
   TNA_CLUSTERS_SUPPORT: REPLACE_TNA_CLUSTERS_SUPPORT
+  INTERNAL_SERVICE_HOSTS: REPLACE_INTERNAL_SERVICE_HOSTS
   EVENT_RATE_LIMITS: ""
